# NeuralNetworkC

./: .gitignore  CMakeLists.txt  CoeffOut.txt  CoeffSynaptiquesMNIST_170_66_10.txt  FonctionsRso.c  FonctionsRso.h  LICENSE  Reseaux_Neuronaux.sln  Reseaux_Neuronaux.vcxproj  Reseaux_Neuronaux.vcxproj.filters  file_mgmt.c  file_mgmt.h  index.md  tronqueCoef.bash
src/: Bitmap.c  Bitmap.h  Calculs.c  Calculs.h  FunctionsIO.c  FunctionsIO.h  Iris.h  Makefile  Neurone.h  Statistiques.c  Statistiques.h  Util.c  Util.h  calculs.c  calculs.h  fonctionsRso.c  fonctionsRso.h  functionsIO.c  functionsIO.h  main.c  structures.c  structures.h
src-old/: Couche.c  Couche.h  Iris.c  Neurone.c  PMC.c  PMC.h  Util.c  Util.h  file_mgmt.h
x64/Debug/: Reseaux_Neuronaux.exe.recipe  Reseaux_Neuronaux.vcxproj.FileListAbsolute.txt
x64/Debug/Reseaux_.44ee8f45.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Reseaux_Neuronaux.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
